fix: migrate dashboard to use "type" instead of "referenceType" field BREAKING CHANGE: The query parameter is now 'type' instead of 'reference_type' https://gravitee.atlassian.net/browse/APIM-4266
(cherry picked from commit f718201c9e5297ea6462f133a8a4c5199ac6e675)

# Conflicts:
#	gravitee-apim-console-webui/src/management/configuration/analytics/dashboard/dashboard.components.ts
#	gravitee-apim-console-webui/src/management/settings/analytics/dashboard/settings-analytics-dashboard.html
#	gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
#	gravitee-apim-rest-api/gravitee-apim-rest-api-management/gravitee-apim-rest-api-management-rest/src/main/java/io/gravitee/rest/api/management/rest/resource/DashboardsResource.java
#	gravitee-apim-rest-api/gravitee-apim-rest-api-model/src/main/java/io/gravitee/rest/api/model/EnvironmentEntity.java
#	gravitee-apim-rest-api/gravitee-apim-rest-api-service/src/test/java/io/gravitee/rest/api/service/impl/EnvironmentServiceTest.java